--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: var(--main-color);
-    margin:0 auto;
+    margin: 0 auto;
 }
 
 .navbar-list {
@@ -42,18 +42,20 @@ body {
     color: var(--font-color);
 }
 
-#script-dump {
+/* #script-dump {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
+} */
 
 .div-dump {
     font-family: var(--main-family);
     color: var(--font-support-color);
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin: 1vh;
 }
 
@@ -68,4 +70,8 @@ body {
 .menu-image {
     max-height: 10vh;
     margin: 1vh;
+}
+
+.home {
+    text-align: center;
 }
